# blimp_code

./: .GITIGNORE  .gitignore  Attach-USBs.ps1  NatNetClient.py  README.md  basic_optitrack_with_wsl.py  basic_teleop_sender.py  launch_gui.sh  requirements.txt
blimp_clean/: package.xml  ros_publishers_graph.html  setup.cfg  setup.py
blimp_clean/blimp_clean/: README.md  agent_manager.py  blimp.py  ekf_no_v.py  low_level_controller.py  optitrack_node.py  param_est_fixed_v.py  param_estimation_old.py  plot_test_statistic.py  serial_node.py  setup_gui_node.py  simple_ekf_alt_sim.py  teleop_receiver.py
blimp_clean/launch/: teleop_launch.launch.py
blimp_msgs/: CMakeLists.txt  README.md  package.xml
blimp_msgs/msg/: Blimps.msg  GainsMsg.msg  GoalMsg.msg  MotorMsg.msg  OptiTrackPose.msg  TeleopMode.msg
blimp_ros/: README.md  package.xml  plotting.py  setup.cfg  setup.py
blimp_ros/blimp_ros/: api.py  cbf.py  high_level_controller.py  low_level_controller.py  optitrack_node.py  serial_node.py  setup_gui_node.py  teleop_node.py  tinympc_controller_sim.py
blimp_ros/launch/: blimp_launch.py
blimp_sim/: README.md  package.xml  plot.py  setup.cfg  setup.py
blimp_sim/blimp_sim/: map_publisher.py  random_voltage_control.py  sim_run.py  update_control.py
blimp_sim/blimp_sim/templates/: index.html
blimp_sim/launch/: sim_launch.py
blimp_sim/map/: map.pgm  map.yaml
